# mini_game

./: .gitignore  CMakeLists.txt  README.md
cmake/: sdl2-config.cmake
source/: main.cpp
source/include/: game_item.h  game_ui_item.h  geometry.h  playable_game_item.h  rect.h  stage.h  ui_helper.h  window.h
source/source/: game_item.cpp  game_ui_item.cpp  geometry.cpp  playable_game_item.cpp  rect.cpp  stage.cpp  ui_helper.cpp  window.cpp
